#9 Added/updated enums EMailMergeTargetTyoe, FieldMetadataType, StringSearchType, UDefType, UDefFieldType

--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
@@ -211,7 +211,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: Is this field indexed? 0 if no, index no. if yes
+      description: Is this field indexed? true if yes; false if no
   example: 
   - "\n<pre><code>NSFieldInfoBase thing;\nBool isIndexed = thing.GetIsIndexed();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoBase.GetIsMandatory()
@@ -485,7 +485,7 @@ items:
     parameters:
     - id: isIndexed
       type: CRMScript.Global.Bool
-      description: Is this field indexed? 0 if no, index no. if yes
+      description: Is this field indexed? true if yes; false if no
     return:
       type: CRMScript.Global.Void
   example: 
