--- a/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
@@ -158,14 +158,14 @@ items:
   nameWithType: NSFieldMetadata.GetFieldType()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetFieldType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Checkbox</li><li>Enum: 1 = Text</li><li>Enum: 2 = Password</li><li>Enum: 3 = Integer</li><li>Enum: 4 = Double</li><li>Enum: 5 = List</li><li>Enum: 6 = Date</li><li>Enum: 99 = Label</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetFieldType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: String, int, decimal, etc.
+      description: Text, Integer, etc. See <xref href=\"FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSFieldMetadata thing;\nInteger fieldType = thing.GetFieldType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldMetadata.GetListName()
@@ -375,7 +375,7 @@ items:
     parameters:
     - id: fieldType
       type: CRMScript.Global.Integer
-      description: String, int, decimal, etc. See enum fieldType.
+      description: Text, Integer, etc. See <xref href=\"FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -499,3 +499,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.FieldMetadataType
+  commentId: T:CRMScript.NetServer.FieldMetadataType
+  isExternal: true
+  name: FieldMetadataType
+  nameWithType: FieldMetadataType
+  fullName: CRMScript.NetServer.FieldMetadataType
