--- a/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
@@ -320,14 +320,14 @@ items:
   nameWithType: NSMailMergeSettings.GetMailMergeDeliveryType()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetMailMergeDeliveryType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = BestFit</li><li>Enum: 1 = Electronic</li><li>Enum: 2 = Mail</li><li>Enum: 3 = Fax</li><li>Enum: 4 = Printer</li><li>Enum: 5 = Xml</li><li>Enum: 6 = XmlFax</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetMailMergeDeliveryType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: How the merged document is delivered to the recipients.
+      description: How the merged document is delivered to the recipients. See <xref href=\"EMailMergeTargetType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSMailMergeSettings thing;\nInteger mailMergeDeliveryType = thing.GetMailMergeDeliveryType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSMailMergeSettings.GetProjectId()
@@ -771,7 +771,7 @@ items:
     parameters:
     - id: mailMergeDeliveryType
       type: CRMScript.Global.Integer
-      description: How the merged document is delivered to the recipients. See enum mailMergeDeliveryType.
+      description: How the merged document is delivered to the recipients. See <xref href=\"EMailMergeTargetType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -989,3 +989,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.EMailMergeTargetType
+  commentId: T:CRMScript.NetServer.EMailMergeTargetType
+  isExternal: true
+  name: EMailMergeTargetType
+  nameWithType: EMailMergeTargetType
+  fullName: CRMScript.NetServer.EMailMergeTargetType
