--- a/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfoAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfoAgent.yml
@@ -82,10 +82,10 @@ items:
       description: 
     - id: fieldType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: isIndexed
       type: CRMScript.Global.Bool
-      description: See enum isIndexed.
+      description: true if yes; false if no
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -126,10 +126,10 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: fieldType
       type: CRMScript.Global.Integer
-      description: See enum fieldType.
+      description: See <xref href=\"UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -173,7 +173,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Bool
       description:
@@ -196,7 +196,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Bool
       description:
@@ -234,17 +234,17 @@ items:
   nameWithType: NSUserDefinedFieldInfoAgent.GetChangedPageOneFields(Integer,Integer)
   fullName: CRMScript.NetServer.NSUserDefinedFieldInfoAgent.GetChangedPageOneFields(Integer,Integer)
   type: Method
-  summary: "\nGets which page one fields have changed from the current version\n"
+  summary: "\nGets which page-one fields have changed from the current version\n"
   remarks: 
   syntax: 
     content: Bool[] GetChangedPageOneFields(Integer ownerType, Integer userGroupId)
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: userGroupId
       type: CRMScript.Global.Integer
-      description: See enum userGroupId.
+      description: 
     return:
       type: CRMScript.Global.Bool[]
   example: 
@@ -318,7 +318,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -343,7 +343,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -365,7 +365,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo[]
   example: 
@@ -387,10 +387,10 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: userGroupId
       type: CRMScript.Global.Integer
-      description: See enum userGroupId.
+      description: 
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo[]
   example: 
@@ -415,7 +415,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -462,7 +462,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -487,7 +487,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo[]
   example: 
@@ -531,7 +531,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo[]
   example: 
@@ -553,10 +553,10 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: userGroupId
       type: CRMScript.Global.Integer
-      description: See enum userGroupId.
+      description: 
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo[]
   example: 
@@ -619,7 +619,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Integer
       description:
@@ -642,7 +642,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -730,10 +730,10 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: active
       type: CRMScript.Global.Bool
-      description: See enum active.
+      description: 
     return:
       type: CRMScript.Global.Void
   example: 
@@ -754,7 +754,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See enum ownerType.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -775,10 +775,10 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: rankedFieldsIds
       type: CRMScript.Global.Integer[]
-      description: See enum rankedFieldsIds.
+      description: 
     return:
       type: CRMScript.Global.Void
   example: 
@@ -792,14 +792,14 @@ items:
   nameWithType: NSUserDefinedFieldInfoAgent.SetUserDefinedPageOneField(Integer,Integer,Integer,Integer)
   fullName: CRMScript.NetServer.NSUserDefinedFieldInfoAgent.SetUserDefinedPageOneField(Integer,Integer,Integer,Integer)
   type: Method
-  summary: "\nSets a user defined fields as page one field.\n"
+  summary: "\nSets a user defined field as page one field.\n"
   remarks: 
   syntax: 
     content: Void SetUserDefinedPageOneField(Integer ownerType, Integer udefFieldId, Integer userGroupId, Integer fieldLineNo)
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: udefFieldId
       type: CRMScript.Global.Integer
       description: 
@@ -808,7 +808,7 @@ items:
       description: 
     - id: fieldLineNo
       type: CRMScript.Global.Integer
-      description: See enum fieldLineNo.
+      description: 
     return:
       type: CRMScript.Global.Void
   example: 
@@ -955,3 +955,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.UDefType
+  commentId: T:CRMScript.NetServer.UDefType
+  isExternal: true
+  name: UDefType
+  nameWithType: UDefType
+  fullName: CRMScript.NetServer.UDefType
