--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -868,8 +868,6 @@ items:
       href: CRMScript.NetServer.accessFlags.yml
     - name: Enum action
       href: CRMScript.NetServer.action.yml
-    - name: Enum active
-      href: CRMScript.NetServer.active.yml
     - name: ActivityStatus
       href: CRMScript.NetServer.ActivityStatus.yml
     - name: Enum actorType
@@ -956,6 +954,8 @@ items:
       href: CRMScript.NetServer.domain.yml
     - name: Enum durationUnit
       href: CRMScript.NetServer.durationUnit.yml
+    - name: EMailMergeTargetType
+      href: CRMScript.NetServer.EMailMergeTargetType.yml
     - name: Enum entity
       href: CRMScript.NetServer.entity.yml
     - name: Enum entityId
@@ -972,18 +972,14 @@ items:
       href: CRMScript.NetServer.externalUserInfoModification.yml
     - name: Enum fieldKeys
       href: CRMScript.NetServer.fieldKeys.yml
-    - name: Enum fieldLineNo
-      href: CRMScript.NetServer.fieldLineNo.yml
-    - name: Enum fieldType
-      href: CRMScript.NetServer.fieldType.yml
+    - name: FieldMetadataType
+      href: CRMScript.NetServer.FieldMetadataType.yml
     - name: Enum freeTextOperator
       href: CRMScript.NetServer.freeTextOperator.yml
     - name: GeneratorEncoding
       href: CRMScript.NetServer.GeneratorEncoding.yml
     - name: InvitationStatus
       href: CRMScript.NetServer.InvitationStatus.yml
-    - name: Enum isIndexed
-      href: CRMScript.NetServer.isIndexed.yml
     - name: Enum justification
       href: CRMScript.NetServer.justification.yml
     - name: Enum languageId
@@ -992,8 +988,6 @@ items:
       href: CRMScript.NetServer.level.yml
     - name: Enum LicenseStatus
       href: CRMScript.NetServer.LicenseStatus.yml
-    - name: Enum mailMergeDeliveryType
-      href: CRMScript.NetServer.mailMergeDeliveryType.yml
     - name: Enum maxLevel
       href: CRMScript.NetServer.maxLevel.yml
     - name: Enum messageCategory
@@ -1016,8 +1010,6 @@ items:
       href: CRMScript.NetServer.origin.yml
     - name: Enum ownerId
       href: CRMScript.NetServer.ownerId.yml
-    - name: Enum ownerType
-      href: CRMScript.NetServer.ownerType.yml
     - name: Enum participantStatus
       href: CRMScript.NetServer.participantStatus.yml
     - name: Enum path
@@ -1032,8 +1024,6 @@ items:
       href: CRMScript.NetServer.priority.yml
     - name: Enum publishType
       href: CRMScript.NetServer.publishType.yml
-    - name: Enum rankedFieldsIds
-      href: CRMScript.NetServer.rankedFieldsIds.yml
     - name: Enum readStatus
       href: CRMScript.NetServer.readStatus.yml
     - name: Enum recaptchaMode
@@ -1054,14 +1044,6 @@ items:
       href: CRMScript.NetServer.roleType.yml
     - name: Enum scope
       href: CRMScript.NetServer.scope.yml
-    - name: Enum searchModeCompany
-      href: CRMScript.NetServer.searchModeCompany.yml
-    - name: Enum searchModeDepartment
-      href: CRMScript.NetServer.searchModeDepartment.yml
-    - name: Enum searchModeFirstname
-      href: CRMScript.NetServer.searchModeFirstname.yml
-    - name: Enum searchModeLastname
-      href: CRMScript.NetServer.searchModeLastname.yml
     - name: Enum selectionType
       href: CRMScript.NetServer.selectionType.yml
     - name: Enum selectionUnionType
@@ -1084,6 +1066,8 @@ items:
       href: CRMScript.NetServer.status.yml
     - name: Enum statusFilter
       href: CRMScript.NetServer.statusFilter.yml
+    - name: StringSearchType
+      href: CRMScript.NetServer.StringSearchType.yml
     - name: Enum sysMaxLevel
       href: CRMScript.NetServer.sysMaxLevel.yml
     - name: Enum tableRights
@@ -1102,10 +1086,12 @@ items:
       href: CRMScript.NetServer.ticketRead.yml
     - name: Enum timeCounter
       href: CRMScript.NetServer.timeCounter.yml
+    - name: UDefFieldType
+      href: CRMScript.NetServer.UDefFieldType.yml
+    - name: UDefType
+      href: CRMScript.NetServer.UDefType.yml
     - name: Enum urlEncoding
       href: CRMScript.NetServer.urlEncoding.yml
-    - name: Enum userGroupId
-      href: CRMScript.NetServer.userGroupId.yml
     - name: Enum userValueOverride
       href: CRMScript.NetServer.userValueOverride.yml
     - name: Enum valueType
